--- a/project/1101/mysite/blog/templates/blog_detail.html
+++ b/project/1101/mysite/blog/templates/blog_detail.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ context.title }}</title>
-</head>
-<body>
-<div><a href="{% url 'home' %}">
-    <h3>个人博客网站</h3>
-</a></div>
+{% extends 'base.html' %}
+
+{% block title %}
+    {{ context.title }}
+{% endblock %}
+
+{% block content %}
     <h3>{{ context.title }}</h3>
     <p>作者：{{ context.author }}</p>
     <p>发表日期：{{ context.created_time|date:"Y-m-d G:n:s" }}</p>
     <p>分类：
         <a href="{% url 'blogs_with_type' context.blog_type.pk %}">{{ context.blog_type }}</a></p>
     <p>{{ context.content }}</p>
-</body>
-</html>
+{% endblock %}
+
+
