--- a/project/1101/mysite/blog/templates/blog_list.html
+++ b/project/1101/mysite/blog/templates/blog_list.html
@@ -1,20 +1,63 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block title %}
     我的网站
 {% endblock %}
 
-{% block content %}
-    {% for blog in context %}
-    <a href="{% url 'blog_detail' blog.pk %}">
-        <h3>{{ blog.title }}</h3>
-    </a>
+{% block nav_home_active %}
+active
+{% endblock %}
 
-    <p>{{ blog.content|truncatechars:50 }}</p>
-    {% empty %}
-        <p>----------暂无内容----------</p>
-    {% endfor %}
-    <p>一共有{{ context|length }}篇博客</p>
+{% block header_extends %}
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-9 col-lg-10">
+                <div class="card">
+                    <div class="card-header">
+                        博客内容（一共有{{ context|length }}篇博客）
+                    </div>
+                    <div class="card-body">
+                        {% for blog in context %}
+                            <div class="blog-message">
+                                <a href="{% url 'blog_detail' blog.pk %}">
+                                    <h3>{{ blog.title }}</h3>
+                                </a>
+                                <p>作者：{{ blog.author }}</p>
+                                <p>发表日期：{{ blog.created_time|date:"Y-m-d" }}</p>
+                                <p>类型：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a></p>
+
+                            </div>
+                            <p>{{ blog.content|truncatechars:100 }}</p>
+                        {% empty %}
+                            <p>----------暂无内容----------</p>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+                <div class="card">
+                    <div class="card-header">博客分类</div>
+                    <div class="card-body">
+                        <ul style="list-style-type: none;">
+                            {% for type in blog_types %}
+                                <li><a href="{% url 'blogs_with_type' type.pk %}">{{ type.type_name }}</a></li>
+                            {% empty %}
+                                <li>暂无分类</li>
+                            {% endfor %}
+
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 
