--- a/project/1101/mysite/blog/templates/blog_detail.html
+++ b/project/1101/mysite/blog/templates/blog_detail.html
@@ -14,15 +14,36 @@
 
 {% block content %}
 
-    <div class="col-10 offset-1 blog-message-content">
-        <h3>{{ context.title }}</h3>
-        <p>作者：{{ context.author }}</p>
-        <p>发表日期：{{ context.created_time|date:"Y-m-d G:n:s" }}</p>
-        <p>分类：
-            <a href="{% url 'blogs_with_type' context.blog_type.pk %}">{{ context.blog_type }}</a>
-        </p>
-        <br>
-        <p>{{ context.content }}</p>
+    <div class="blog-message-content">
+        <h3>{{ blog_message.title }}</h3>
+        <ul>
+            <li>作者：{{ blog_message.author }}</li>
+            <li>发表日期：{{ blog_message.created_time|date:"Y-m-d G:n:s" }}</li>
+            <li>分类：
+                <a href="{% url 'blogs_with_type' blog_message.blog_type.pk %}">{{ blog_message.blog_type }}</a>
+            </li>
+        </ul>
+
+        <div class="blog-content">
+            <p>{{ blog_message.content }}</p>
+        </div>
+        <div class="blog-more">
+            <span>
+                {% if previous_blog %}
+                    <a href="{% url 'blog_detail' previous_blog.pk %}">上一篇：{{ previous_blog.title }}</a>
+                {% else %}
+                    没有了
+                {% endif %}
+            </span>
+            <span>
+                {% if next_blog %}
+                    <a href="{% url 'blog_detail' next_blog.pk %}">下一篇：{{ next_blog.title }}</a>
+                {% else %}
+                    没有了
+                {% endif %}
+            </span>
+        </div>
+
     </div>
 
 
