--- a/project/1101/mysite/blog/templates/blogs_with_type.html
+++ b/project/1101/mysite/blog/templates/blogs_with_type.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 {% block title %}
     {{ context.blog_type }}
 {% endblock %}
@@ -8,17 +8,117 @@
 active
 {% endblock %}
 
-{% block content %}
-    <h2>{{ blog_type }}</h2>
-    {% for blog in context %}
-        <a href="{% url 'blog_detail' blog.pk %}">
-            <h3>{{ blog.title }}</h3>
-        </a>
+{% block header_extends %}
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.min.css' %}">
+{% endblock %}
 
-        <p>{{ blog.content|truncatechars:50 }}</p>
-        {% empty %}
-            <p>----------暂无内容----------</p>
-    {% endfor %}
-    <p>一共有{{ context|length }}篇博客</p>
+{% block content %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-9 col-lg-10">
+                <div class="card">
+                    <div class="card-header">
+                        类型：{{ blog_type }}
+                    </div>
+                    <div class="card-body">
+                        {% for blog in context %}
+                            <div class="blog-message">
+                                <a href="{% url 'blog_detail' blog.pk %}">
+                                    <h3>{{ blog.title }}</h3>
+                                </a>
+                                <p class="fa fa-user-circle">作者：{{ blog.author }}</p>
+                                <p class="fa fa-clock-o">发表日期：{{ blog.created_time|date:"Y-m-d" }}</p>
+                                <p>类型：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a></p>
+
+                            </div>
+                            <p>{{ blog.content|truncatechars:100 }}</p>
+                        {% empty %}
+                            <p>----------暂无内容----------</p>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="page-bottom">
+
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+
+                            {% if context.has_previous %}
+                                <li class="page-item">
+                                <a class="page-link" href="?page={{ context.previous_page_number }}" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" tabindex="-1" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                            {% endif %}
+
+
+                            {% for page in page_range %}
+                                {% if page == context.number %}
+                                    <li class="page-item active"><span class="page-link">{{ page }}</span></li>
+                                {% else %}
+                                    {% if page == '...' %}
+                                        <li class="page-item disabled"><span class="page-link">{{ page }}</span></li>
+                                    {% else %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ page }}">{{ page }}</a></li>
+                                    {% endif %}
+                                {% endif %}
+
+                            {% endfor %}
+
+                            {% if context.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ context.next_page_number }}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" tabindex="-1" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            {% endif %}
+
+
+                        </ul>
+                    </nav>
+                    <p>
+                        共有{{ context.paginator.count }}篇博客，
+                        当前第{{ context.number }}页，
+                        共{{ context.paginator.num_pages }}页
+                    </p>
+                </div>
+
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+                <div class="card">
+                    <div class="card-header">博客分类</div>
+                    <div class="card-body">
+                        <ul style="list-style-type: none;">
+                            {% for type in blog_types %}
+                                <li><a href="{% url 'blogs_with_type' type.pk %}">{{ type.type_name }}</a></li>
+                            {% empty %}
+                                <li>暂无分类</li>
+                            {% endfor %}
+
+                        </ul>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
