--- a/project/1101/mysite/blog/static/blog/blog.css
+++ b/project/1101/mysite/blog/static/blog/blog.css
@@ -29,6 +29,7 @@ div.blog-message-content ul li{
 }
 div.blog-message-content div.blog-content{
     clear: both;
+    word-break: break-all;
 }
 
 div.page-bottom nav{
