--- a/project/1101/mysite/blog/templates/blog_detail.html
+++ b/project/1101/mysite/blog/templates/blog_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %}
-    {{ context.title }}
+    {{ blog_message.title }}
 {% endblock %}
 
 {% block nav_blog_active %}
