--- a/project/1101/mysite/blog/templates/blog_list.html
+++ b/project/1101/mysite/blog/templates/blog_list.html
@@ -44,9 +44,9 @@ active
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
 
-                            {% if context.has_previous %}
+                            {% if page_of_blogs.has_previous %}
                                 <li class="page-item">
-                                <a class="page-link" href="?page={{ context.previous_page_number }}" aria-label="Previous">
+                                <a class="page-link" href="?page={{ page_of_blogs.previous_page_number }}" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                     <span class="sr-only">Previous</span>
                                 </a>
@@ -62,7 +62,7 @@ active
 
 
                             {% for page in page_range %}
-                                {% if page == context.number %}
+                                {% if page == page_of_blogs.number %}
                                     <li class="page-item active"><span class="page-link">{{ page }}</span></li>
                                 {% else %}
                                     {% if page == '...' %}
@@ -74,9 +74,9 @@ active
 
                             {% endfor %}
 
-                            {% if context.has_next %}
+                            {% if page_of_blogs.has_next %}
                                 <li class="page-item">
-                                    <a class="page-link" href="?page={{ context.next_page_number }}" aria-label="Next">
+                                    <a class="page-link" href="?page={{ page_of_blogs.next_page_number }}" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                     </a>
@@ -107,7 +107,11 @@ active
                     <div class="card-body">
                         <ul style="list-style-type: none;">
                             {% for type in blog_types %}
-                                <li><a href="{% url 'blogs_with_type' type.pk %}">{{ type.type_name }}</a></li>
+                                <li>
+                                    <a href="{% url 'blogs_with_type' type.pk %}">
+                                    {{ type.type_name }}({{ type.blog_count }})
+                                    </a>
+                                </li>
                             {% empty %}
                                 <li>暂无分类</li>
                             {% endfor %}
@@ -119,8 +123,12 @@ active
                     <div class="card-header">日期归档</div>
                     <div class="card-body">
                         <ul style="list-style-type: none;">
-                            {% for date in blog_date %}
-                                <li><a href="{% url 'blogs_with_date' date.year date.month %}">{{ date|date:"Y年m月" }}</a></li>
+                            {% for date,count in blog_date.items %}
+                                <li>
+                                    <a href="{% url 'blogs_with_date' date.year date.month %}">
+                                        {{ date|date:"Y年m月" }}({{ count }})
+                                    </a>
+                                </li>
                             {% empty %}
                                 <li>暂无分类</li>
                             {% endfor %}
