--- a/project/1101/mysite/blog/templates/blogs_with_type.html
+++ b/project/1101/mysite/blog/templates/blogs_with_type.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %}
-    {{ context.blog_type }}
+    {{ page_of_blogs.blog_type }}
 {% endblock %}
 
 {% block nav_blog_active %}
@@ -23,7 +23,7 @@ active
                         类型：{{ blog_type }}
                     </div>
                     <div class="card-body">
-                        {% for blog in context %}
+                        {% for blog in page_of_blogs %}
                             <div class="blog-message">
                                 <a href="{% url 'blog_detail' blog.pk %}">
                                     <h3>{{ blog.title }}</h3>
@@ -44,9 +44,9 @@ active
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
 
-                            {% if context.has_previous %}
+                            {% if page_of_blogs.has_previous %}
                                 <li class="page-item">
-                                <a class="page-link" href="?page={{ context.previous_page_number }}" aria-label="Previous">
+                                <a class="page-link" href="?page={{ page_of_blogs.previous_page_number }}" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                     <span class="sr-only">Previous</span>
                                 </a>
@@ -62,7 +62,7 @@ active
 
 
                             {% for page in page_range %}
-                                {% if page == context.number %}
+                                {% if page == page_of_blogs.number %}
                                     <li class="page-item active"><span class="page-link">{{ page }}</span></li>
                                 {% else %}
                                     {% if page == '...' %}
@@ -74,9 +74,9 @@ active
 
                             {% endfor %}
 
-                            {% if context.has_next %}
+                            {% if page_of_blogs.has_next %}
                                 <li class="page-item">
-                                    <a class="page-link" href="?page={{ context.next_page_number }}" aria-label="Next">
+                                    <a class="page-link" href="?page={{ page_of_blogs.next_page_number }}" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                     </a>
@@ -94,9 +94,9 @@ active
                         </ul>
                     </nav>
                     <p>
-                        共有{{ context.paginator.count }}篇博客，
-                        当前第{{ context.number }}页，
-                        共{{ context.paginator.num_pages }}页
+                        共有{{ page_of_blogs.paginator.count }}篇博客，
+                        当前第{{ page_of_blogs.number }}页，
+                        共{{ page_of_blogs.paginator.num_pages }}页
                     </p>
                 </div>
 
@@ -107,7 +107,11 @@ active
                     <div class="card-body">
                         <ul style="list-style-type: none;">
                             {% for type in blog_types %}
-                                <li><a href="{% url 'blogs_with_type' type.pk %}">{{ type.type_name }}</a></li>
+                                <li>
+                                    <a href="{% url 'blogs_with_type' type.pk %}">
+                                        {{ type.type_name }}({{ type.blog_count }})
+                                    </a>
+                                </li>
                             {% empty %}
                                 <li>暂无分类</li>
                             {% endfor %}
