--- a/project/1101/mysite/blog/templates/blogs_with_date.html
+++ b/project/1101/mysite/blog/templates/blogs_with_date.html
@@ -31,9 +31,9 @@ active
                                 <p class="fa fa-user-circle">作者：{{ blog.author }}</p>
                                 <p class="fa fa-clock-o">发表日期：{{ blog.created_time|date:"Y-m-d" }}</p>
                                 <p>类型：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a></p>
-
+                                <p>阅读（{{ blog.get_read_num }}）</p>
                             </div>
-                            <p>{{ blog.content|truncatechars:100 }}</p>
+                            <p>{{ blog.content|striptags|truncatechars:100 }}</p>
                         {% empty %}
                             <p>----------暂无内容----------</p>
                         {% endfor %}
