--- a/project/1101/mysite/templates/home.html
+++ b/project/1101/mysite/templates/home.html
@@ -12,34 +12,45 @@
 
 {% block content %}
     <h3 class="home-content">欢迎访问我的网站，随便看</h3>
-    <div id="container" style="width: 600px;height:400px;"></div>
+    <div id="container" style=""></div>
+
     <script>
         // 图表配置
         var options = {
             chart: {
-                type: 'bar'                          //指定图表的类型，默认是折线图（line）
+                type: 'line'                          //指定图表的类型，默认是折线图（line）
             },
             title: {
-                text: '我的第一个图表'                 // 标题
+                text: null                 // 标题
             },
             xAxis: {
-                categories: ['苹果', '香蕉', '橙子']   // x 轴分类
+                categories: {{ dates|safe }},   // x 轴分类
+                tickmarkPlacement:'on',
             },
             yAxis: {
                 title: {
-                    text: '吃水果个数'                // y 轴标题
-                }
+                    text: null               // y 轴标题
+                },
+                labels:{
+                    enabled:false   //是否显示y轴详细
+                },
+                gridLineDashStyle:'Dash'
             },
             series: [{                              // 数据列
-                name: '小明',                        // 数据列名
-                data: [1, 0, 4]                     // 数据
-            }, {
-                name: '小红',
-                data: [5, 7, 3]
-            }]
+                name: '阅读量',                        // 数据列名
+                data: {{ read_nums|safe }},                     // 数据
+            }],
+            plotOptions: {      //数据标签为显示
+                line: {
+                    dataLabels: {
+                        enabled: true
+                    }
+                }
+            },
+            legend: { enabled: false },     //图例
+            credits: { enabled:false },     //版权信息
         };
         // 图表初始化函数
         var chart = Highcharts.chart('container', options);
     </script>
-    <p>{{ read_nums }}</p>
 {% endblock %}
