--- a/project/1101/mysite/blog/static/blog/blog.css
+++ b/project/1101/mysite/blog/static/blog/blog.css
@@ -49,3 +49,10 @@ div.blog-more span{
     margin-top: 1em;
     margin-right: 3em;
 }
+div.comment-area{
+    margin-top: 2em;
+}
+h3.comment-area-title{
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 0.4em;
+}
