--- a/project/1101/mysite/blog/templates/blog_detail.html
+++ b/project/1101/mysite/blog/templates/blog_detail.html
@@ -10,6 +10,7 @@
 
 {% block header_extends %}
     <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap-4.1.3/css/bootstrap.min.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -43,6 +44,43 @@
                     没有了
                 {% endif %}
             </span>
+        </div>
+        <div class="comment-area">
+            <h3 class="comment-area-title">
+                提交评论区域
+            </h3>
+            {% if user.is_authenticated %}
+
+                <form action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="comment_text">{{ user.username }}欢迎评论~</label>
+                        <textarea id="comment_text" name="text" class="form-control" rows="4"></textarea>
+                    </div>
+
+                    <input type="hidden" name="object_id" value="{{ blog_message.pk }}">
+                    <input type="hidden" name="content_type" value="blog">
+                    <input type="submit" value="评论" class="btn btn-primary" style="float: right">
+                </form>
+            {% else %}
+                未登录,登陆之后方可评论
+                <a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+            {% endif %}
+        </div>
+        <div class="comment-area">
+            <h3 class="comment-area-title">
+                评论列表
+            </h3>
+            {% for comment in comments %}
+                <div>
+                    {{ comment.user.username }}
+                    ({{ comment.comment_time|date:"Y-m-d H:n:s" }}):
+                    {{ comment.text }}
+                </div>
+            {% empty %}
+                暂无评论
+            {% endfor %}
+
         </div>
 
     </div>
