--- a/project/1101/mysite/static/home.css
+++ b/project/1101/mysite/static/home.css
@@ -10,3 +10,10 @@ div#container{
     min-width: 20em;
     max-width: 30em;
 }
+ul{
+    list-style-type: none;
+}
+div.hot-day{
+    text-align: center;
+    margin-top: 2em;
+}
