--- a/project/1101/mysite/templates/home.html
+++ b/project/1101/mysite/templates/home.html
@@ -13,6 +13,51 @@
 {% block content %}
     <h3 class="home-content">欢迎访问我的网站，随便看</h3>
     <div id="container" style=""></div>
+    <div class="hot-day">
+        <h3>今天热门博客</h3>
+        <ul>
+            {% for hot_data in today_hot_data %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_data.content_object.pk %}">
+                        {{ hot_data.content_object.title }}
+                    </a>
+                    ({{ hot_data.read_num }})
+                </li>
+            {% empty %}
+                <li>今天暂没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-day">
+        <h3>昨日热门博客</h3>
+        <ul>
+            {% for hot_data in yesterday_hot_data %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_data.content_object.pk %}">
+                        {{ hot_data.content_object.title }}
+                    </a>
+                    ({{ hot_data.read_num }})
+                </li>
+            {% empty %}
+                <li>昨日暂没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-day">
+        <h3>本周热门博客</h3>
+        <ul>
+            {% for hot_blog in hot_blogs_for_7_days %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_blog.id %}">
+                        {{ hot_blog.title }}
+                    </a>
+                    ({{ hot_blog.read_num_sum }})
+                </li>
+            {% empty %}
+                <li>本周暂没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
 
     <script>
         // 图表配置
@@ -26,6 +71,7 @@
             xAxis: {
                 categories: {{ dates|safe }},   // x 轴分类
                 tickmarkPlacement:'on',
+                title:{text:'前七日阅读量变化'},
             },
             yAxis: {
                 title: {
