--- a/project/1101/mysite/blog/templates/blog_detail.html
+++ b/project/1101/mysite/blog/templates/blog_detail.html
@@ -64,7 +64,10 @@
                 </form>
             {% else %}
                 未登录,登陆之后方可评论
-                <a href="{% url 'login' %}?from={{ request.get_full_path }}">登录</a>
+                <a href="{% url 'login' %}?from={{ request.get_full_path }}" class="btn btn-primary">登录</a>
+                <span>or</span>
+                <a href="{% url 'register' %}?from={{ request.get_full_path }}" class="btn btn-danger">注册</a>
+
             {% endif %}
         </div>
         <div class="comment-area">
